fix arrow mobile and logo

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -42,6 +42,10 @@
                 justify-content: center !important;
                 width: 100% !important;
                 text-align: center !important;
+
+                img {
+                    display: none !important;
+                }
             }
         }
     }
