--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -10,6 +10,7 @@
             
             .imgContainer {
                 height: 100% !important;
+                float: none !important;
 
                 img {
                     height: 100% !important;
