--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -78,6 +78,16 @@
                 font-size: 20px;
                 color: $primaryColor;
                 text-align: center;
+
+                a {
+                    text-decoration: none;
+                    color: $primaryColor;
+                    transition: all 0.3s ease-in-out;
+                }
+
+                a:hover {
+                    font-size: 21px;
+                }
             }
 
             img {
