--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -8,6 +8,7 @@
             font-size: 30px !important;
             margin-bottom: 15px !important;
             padding-top: 20px !important;
+            height: 75px;
         }
 
         ul {
